# Decelerates

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ui  README.md  alembic.ini  app.py  constants.py  db.py  docker-compose.yml  main.py  prompts.py  pyproject.toml  pyrightconfig.json  rag_chain.py  requirements.txt  risk.py  ui.py
.claude/: settings.local.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: activity-reminders.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  e2e.yml  msgraph-subscription-renew.yml  nightly-altman-snapshot.yml  nightly-news-refresh.yml  quarterly-refresh.yml  renewal-reminder.yml  tender-reminders.yml  weekly-digest.yml  weekly-risk-refresh.yml
.streamlit/: config.toml
alembic/: env.py
alembic/pending/: README.md  broker_settings_per_firm.py
alembic/versions/: 2dd4ee81fd23_add_tender_chat_sessions.py  4fa17f9b251a_initial_schema.py  a1b2c3d4e5f6_add_portfolios.py  a2b3c4d5e6f7_add_parsed_fields_to_insurance_offers.py  a7b8c9d0e1f2_add_last_refreshed_at.py  a7b8c9d0e1f2_add_user_chat_messages.py  a8b9c0d1e2f3_add_portfolio_risk_snapshot.py  b1c2d3e4f5g6_add_auth_multitenancy.py  b3c4d5e6f7g8_add_client_tokens.py  b8c9d0e1f2g3_add_company_whiteboards.py  b8c9d0e1f2g3_add_is_demo_to_broker_firms.py  b9c0d1e2f3g4_add_company_news.py  c0d1e2f3g4h5_add_incoming_email_log.py  c2d3e4f5g6h7_add_crm_tables.py  c3d4e5f6g7h8_add_offer_status.py  c9d0e1f2g3h4_add_sso_and_insurer_api_columns.py  d0e1f2g3h4i5_add_tenders_and_coverage_analyses.py  d1e2f3g4h5i6_add_message_id_to_incoming_email_log.py  d2e3f4g5h6i7_add_policy_document_url.py  d4e5f6g7h8i9_add_sla_signature.py  e1f2g3h4i5j6_add_user_chat_messages.py  e5f6g7h8i9j0_add_audit_log.py  f2g3h4i5j6k7_add_company_whiteboards.py  f6g7h8i9j0k1_add_renewal_stage.py  fd5ea67956bb_add_tags_to_insurance_documents.py  g3h4i5j6k7l8_add_tender_recipient_access_token.py  g7h8i9j0k1l2_add_firm_id_to_portfolios.py  h4i5j6k7l8m9_add_tender_contract_session_id.py  h8i9j0k1l2m3_add_session_id_to_company_notes.py  i9j0k1l2m3n4_add_antall_ansatte_to_companies.py  j0k1l2m3n4o5_add_renewal_notified_days.py  k1l2m3n4o5p6_add_gdpr_soft_delete.py  l2m3n4o5p6q7_add_job_queue.py  m1n2o3p4q5r6_add_decline_reason_to_tender_recipients.py  m3n4o5p6q7r8_add_blob_url_to_pdf_sources.py  n2o3p4q5r6s7_add_insurance_product_catalog.py  n4o5p6q7r8s9_add_commission_fields_and_idd.py  o3p4q5r6s7t8_add_property_metadata_to_companies.py  o5p6q7r8s9t0_add_insurers_and_submissions.py  p4q5r6s7t8u9_add_tender_customer_portal_columns.py  (+11 more)
api/: auth.py  constants.py  constants_insurance.py  container.py  db.py  limiter.py  main.py  prompts.py  rag_chain.py  risk.py  schemas.py  telemetry.py
api/adapters/: bing_search_adapter.py  blob_storage_adapter.py  foundry_llm_adapter.py  msgraph_email_adapter.py  notification_adapter.py  secret_adapter.py  serper_search_adapter.py
api/domain/: exceptions.py
api/models/: __init__.py  _base.py  broker.py  company.py  compliance.py  coverage.py  crm.py  inbound_email.py  insurance.py  insurance_product.py  news.py  pipeline.py  portfolio.py  system.py  tender.py
api/routers/: __init__.py  accounting.py  activities.py  admin_demo.py  admin_email_log.py  admin_metrics.py  admin_router.py  admin_seed.py  analytics.py  anbud_package.py  audit.py  broker.py  chat_history.py  claims.py  client_token.py  commission.py  idd.py  (+37 more)
cf-proxy/: package.json  wrangler.toml
docker/: Dockerfile  Dockerfile.frontend
docs/: 2024 SLA Howden front -Norsk.docx  classes_BrokerAccelerator.puml  company_lookup_flow.puml  packages_BrokerAccelerator.puml  pdf_extraction_flow.puml  poc-demo-guide.md  ui-audit-2026-04-09.md
domain/: __init__.py  exceptions.py
frontend/: .env.local.example  .eslintrc.json  .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  translations.json
infra/: README.md
routers/: __init__.py  broker.py  company.py  documents.py  financials.py  knowledge.py  offers.py  risk_router.py  sla.py  utils.py
scripts/: bootstrap-tf-backend.sh  canary_watchdog.py  check_dead_client_fns.py  dump_openapi.py  fix_ffsformidler_sections.py  gen_diagrams.sh  generate_sample_offers.py  generate_sample_risk_profiles.py  index_app_guide.py  install-antire-plugin.sh  merge-pr.sh  run_all.sh  run_api.sh  run_api_win.py  run_ui.sh  seed_demo.py  seed_demo_tenders.py  setup.sh  start_frontend_local.sh  start_local.sh
services/: __init__.py  broker.py  company.py  documents.py  external_apis.py  llm.py  pdf_extract.py  pdf_generate.py  pdf_sources.py  rag.py  sla_service.py
tests/: conftest.py  test_clean_code.py  test_company.py  test_external_apis.py  test_insurance_needs.py  test_integration.py  test_llm.py  test_pdf_extract.py  test_risk.py  test_system.py
transksrt/: generate_sections.py
ui/: auth.py  config.py  main.py  styles.css
video/: package-lock.json  package.json
(+652 files in other folders)
